// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DivideSubStake /> should render correctly 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="mt-2 form-group row"
    >
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="first-substake-value"
          name="firstSubstakeValue"
          type="text"
          value="0"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
      <div
        class="d-flex justify-content-center col-sm-6"
        style="padding-top: 8px;"
      >
        <div
          class="rc-slider"
        >
          <div
            class="rc-slider-rail"
          />
          <div
            class="rc-slider-track"
            style="left: 0%; width: 50%;"
          />
          <div
            class="rc-slider-step"
          />
          <div
            aria-disabled="false"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="50"
            class="rc-slider-handle"
            role="slider"
            style="left: 50%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          />
        </div>
      </div>
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="second-substake-value"
          name="secondSubstakeValue"
          type="text"
          value="0"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
      >
        Extend for
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control"
          name="stakeDuration"
          type="number"
          value="1"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
      <label
        class="form-label col-form-label col-md-2"
      >
        periods
      </label>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        type="submit"
      >
        Divide
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<DivideSubStake /> should validate fields 1`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="mt-2 form-group row"
    >
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="first-substake-value"
          name="firstSubstakeValue"
          type="text"
          value="1000"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          >
            Minimum stake is 15000 NU
          </div>
        </div>
      </div>
      <div
        class="d-flex justify-content-center col-sm-6"
        style="padding-top: 8px;"
      >
        <div
          class="rc-slider"
        >
          <div
            class="rc-slider-rail"
          />
          <div
            class="rc-slider-track"
            style="left: 0%; width: 0%;"
          />
          <div
            class="rc-slider-step"
          />
          <div
            aria-disabled="false"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle"
            role="slider"
            style="left: 0%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          />
        </div>
      </div>
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="second-substake-value"
          name="secondSubstakeValue"
          type="text"
          value="299000"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
      >
        Extend for
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control"
          name="stakeDuration"
          type="number"
          value="1"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
      <label
        class="form-label col-form-label col-md-2"
      >
        periods
      </label>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Divide
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<DivideSubStake /> should validate fields 2`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="mt-2 form-group row"
    >
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="first-substake-value"
          name="firstSubstakeValue"
          type="text"
          value="300000"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          >
            Minimum stake is 15000 NU
          </div>
        </div>
      </div>
      <div
        class="d-flex justify-content-center col-sm-6"
        style="padding-top: 8px;"
      >
        <div
          class="rc-slider"
        >
          <div
            class="rc-slider-rail"
          />
          <div
            class="rc-slider-track"
            style="left: 0%; width: 100%;"
          />
          <div
            class="rc-slider-step"
          />
          <div
            aria-disabled="false"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="100"
            class="rc-slider-handle"
            role="slider"
            style="left: 100%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          />
        </div>
      </div>
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="second-substake-value"
          name="secondSubstakeValue"
          type="text"
          value="0"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
      >
        Extend for
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control"
          name="stakeDuration"
          type="number"
          value="1"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
      <label
        class="form-label col-form-label col-md-2"
      >
        periods
      </label>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Divide
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<DivideSubStake /> should validate fields 3`] = `
<DocumentFragment>
  <form
    class=""
  >
    <div
      class="mt-2 form-group row"
    >
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="first-substake-value"
          name="firstSubstakeValue"
          type="text"
          value="3000000"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
      <div
        class="d-flex justify-content-center col-sm-6"
        style="padding-top: 8px;"
      >
        <div
          class="rc-slider"
        >
          <div
            class="rc-slider-rail"
          />
          <div
            class="rc-slider-track"
            style="left: 0%; width: 100%;"
          />
          <div
            class="rc-slider-step"
          />
          <div
            aria-disabled="false"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="100"
            class="rc-slider-handle"
            role="slider"
            style="left: 100%; transform: translateX(-50%);"
            tabindex="0"
          />
          <div
            class="rc-slider-mark"
          />
        </div>
      </div>
      <div
        class="col-sm-3"
      >
        <input
          class="form-control form-control-sm"
          data-testid="second-substake-value"
          name="secondSubstakeValue"
          type="text"
          value="0"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: inline;"
          >
            Minimum stake is 15000 NU
          </div>
        </div>
      </div>
    </div>
    <div
      class="form-group row"
    >
      <label
        class="form-label col-form-label col-md-2 offset-md-2"
      >
        Extend for
      </label>
      <div
        class="col-md-4"
      >
        <input
          class="form-control"
          name="stakeDuration"
          type="number"
          value="1"
        />
        <div
          class="feedback-placeholder"
        >
          <div
            class="invalid-feedback"
            style="display: none;"
          />
        </div>
      </div>
      <label
        class="form-label col-form-label col-md-2"
      >
        periods
      </label>
    </div>
    <div
      class="d-flex justify-content-center"
    >
      <button
        class="btn btn-primary"
        disabled=""
        type="submit"
      >
        Divide
      </button>
    </div>
  </form>
</DocumentFragment>
`;
